
	* lib/gtkmm.cygclass (gtkmm_autoreconf):
	Define ACLOCAL to search the scripts directory.

	* lib/qt3.cygclass (doqt3inc, doqt3lib, qt3pluginto, doqt3plugin):
	New convenience functions for qt3 src_install().

	* bin/cygport.in (cygautoreconf),
	  lib/gnome2.cygclass (gnome2_autoreconf):
	Improve detection of AC_CONFIG_SUBDIRS and AC_CONFIG_HEADERS.

	* bin/cygport.in (pkg_diff):
	Ignore KDE configure.in files only if ${S}/configure.in.in is present.

	* CYGWIN-PATCHES/README, lib/Makefile.am (cygclass_DATA), 
	  lib/mono.cygclass:
	New mono.cygclass for building Mono C# packages.

	* CYGWIN-PATCHES/README, TODO, bin/cygport.in (src_unpack),
	  lib/Makefile.am (cygclass_DATA), lib/git.cygclass:
	New git.cygclass for git snapshots.

	* bin/cygport.in (unpack):
	Fix handling of non-tar .bz2 and .gz archives.

	* data/Makefile.am:
	Don't clobber cygport.conf on a local install.

	* bin/cygport.in (cygautoreconf),
	  lib/gnome2.cygclass (gnome2_autoreconf):
	Prevent automake from installing COPYING and INSTALL where not
	originally included.

	* bin/cygport.in (src_test, pkg_diff):
	Handle various Makefile names.

	* bin/prep_libtool_modules.sh:
	Ignore ../bin/ when looking for module versioning.
	Support Apache2 .so modules.

	* lib/gtk2-perl.cygclass (gtk2_perl_install):
	Add missing perl_postinst.

	* data/cygport.conf, data/mirrors:
	Fix headers.

	* lib/perl.cygclass:
	Check for Module::Build before use.

	* bin/cygport.in, lib/xorg.cygclass:
	Provide universal default {C,CPP,CXX,F77,GCJ}FLAGS and MAKEOPTS.

	* bin/dodoc:
	Don't overwrite already-installed files.

	* CYGWIN-PATCHES/README, CYGWIN-PATCHES/setup.hint,
	  README, bin/cygport.in (__prepstrip):
	Do not strip Mono assemblies during postinstall.
	Require binutils for objdump and strip.

	* bin/cygport.in (cygautoreconf):
	Touch README as well to prevent automake failure.

	* CYGWIN-PATCHES/README, TODO, bin/Makefile.am, bin/cygport.in, 
	  data/Makefile.am, data/cygport.conf, data/mirrors,